--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/jest": "^20.0.7",
     "jest": "^20.0.4",
-    "ts-jest": "^20.0.10"
+    "ts-jest": "^20.0.10",
+    "typescript": "^2.2.4"
   }
 }
