--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-fsa-redux-observable",
-  "version": "0.16.2",
+  "version": "0.17.0",
   "description": "TypeScript FSA utilities for redux-observable",
   "main": "dist/index.js",
   "typings": "lib/index.ts",
@@ -38,14 +38,14 @@
   "dependencies": {
     "@types/redux": "^3.6.0",
     "redux": "^3.7.2",
-    "redux-observable": "^0.16.0",
+    "redux-observable": "0.17.0",
     "rxjs": "^5.4.2",
     "typescript-fsa-reducers": "^0.4.4"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.7",
-    "jest": "^20.0.4",
-    "ts-jest": "^20.0.10",
+    "@types/jest": "21.1.6",
+    "jest": "21.2.1",
+    "ts-jest": "21.2.2",
     "typescript": "^2.5.2"
   }
 }
