--- a/package.json
+++ b/package.json
@@ -10,18 +10,6 @@
     "test": "jest",
     "prepublishOnly ": "npm run build"
   },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json"
-    ]
-  },
   "files": [
     "dist",
     "lib"
@@ -36,17 +24,22 @@
   ],
   "author": "m0a",
   "license": "MIT",
-  "dependencies": {
-    "redux": "^3.7.2",
-    "redux-observable": "^0.17.0",
-    "rxjs": "^5.5.6",
-    "typescript-fsa-reducers": "^0.4.5"
-  },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
-    "jest": "^22.0.5",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.9",
+    "jest": "^23.6.0",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.0.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.0.1",
-    "typescript": "^2.6.2"
+    "rxjs": "^6.3.3",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.6",
+    "typescript-fsa": "^2.5.0",
+    "typescript-fsa-reducers": "^1.0.0"
+  },
+  "peerDependencies": {
+    "redux-observable": "1.x",
+    "rxjs": "6.x",
+    "typescript-fsa": "2.x"
   }
 }
